--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
